[FEATURE] Event Management Implemented (CRUD)

--- a/EventPlanner/src/app/details/event-details/event-details.component.html
+++ b/EventPlanner/src/app/details/event-details/event-details.component.html
@@ -5,7 +5,7 @@
     <div class="event-info">
       <h2>{{ event.name }}</h2>
       <!-- <p class="event-date">{{ event.date | date:'longDate' }}</p> -->
-      <p class="event-description">{{ event.location }}</p>
+      <p class="event-description">{{ event.locationName }}</p>
       <p class="event-description">{{ event.description }}</p>
     </div>
     
