--- a/EventPlanner/src/app/event-manager/create-event/create-event.component.css
+++ b/EventPlanner/src/app/event-manager/create-event/create-event.component.css
@@ -40,6 +40,9 @@ mat-error {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 80em;
     width: 100%;
+    max-height: 90vh;
+    overflow-y: auto;
+    padding: 1rem; 
 }
 
 .form-title {
@@ -57,27 +60,6 @@ mat-error {
 
 .full-width {
     flex: 1 1 100%;
-}
-
-.close-button {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    right: 0.5em;
-    top: 0.5em;
-    background: none;
-    border: none;
-    cursor: pointer;
-    background-color: #a29bfe00;
-    border-radius: 100%;
-    padding: 0.5em;
-    transition: background-color 0.3s;
-}
-
-.close-button:hover {
-    color: #8880ff;
-    background-color: #a29bfe51;
 }
 
 .form-buttons {
