--- a/EventPlanner/src/app/event-manager/edit-event/edit-event.component.css
+++ b/EventPlanner/src/app/event-manager/edit-event/edit-event.component.css
@@ -40,6 +40,9 @@ mat-error {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 80em;
     width: 100%;
+    max-height: 90vh;
+    overflow-y: auto;
+    padding: 1rem; 
 }
 
 .form-title {
@@ -57,27 +60,6 @@ mat-error {
 
 .full-width {
     flex: 1 1 100%;
-}
-
-.close-button {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    right: 0.5em;
-    top: 0.5em;
-    background: none;
-    border: none;
-    cursor: pointer;
-    background-color: #a29bfe00;
-    border-radius: 100%;
-    padding: 0.5em;
-    transition: background-color 0.3s;
-}
-
-.close-button:hover {
-    color: #8880ff;
-    background-color: #a29bfe51;
 }
 
 .form-buttons {
@@ -185,48 +167,47 @@ button.cancel:hover {
 }
 
 .role-section {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 2rem;
 }
 
 .radio-group {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .radio-group label {
-    font-family: "Raleway", sans-serif;
-    font-size: 1rem;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
+  font-family: 'Raleway', sans-serif;
+  font-size: 1rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
-.radio-group input[type="radio"] {
-    margin-right: 0.5rem;
-    transform: scale(1.5);
+.radio-group input[type='radio'] {
+  margin-right: 0.5rem;
+  transform: scale(1.5);
 }
 
-#roleIcon,
-#roleLabel {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
+#roleIcon, #roleLabel {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .buttons {
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    justify-content: center;
-    gap: 16px;
-    margin-top: 16px;
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  margin-top: 16px;
 }
 
 .image-picker-buttons .submit {
-    padding: 8px 16px;
-    font-size: 14px;
+  padding: 8px 16px;
+  font-size: 14px;
 }
