--- a/EventPlanner/src/app/event-manager/events/events.component.css
+++ b/EventPlanner/src/app/event-manager/events/events.component.css
@@ -106,3 +106,9 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
+
+.empty {
+    text-align: center;
+    font-size: 2rem;
+    font-family: 'Raleway';
+}
