[FEATURE] User Profile Management Implemented, Deactivation Don't Work Well

--- a/EventPlanner/src/app/user-manager/favourite-solutions/favourite-solutions.component.html
+++ b/EventPlanner/src/app/user-manager/favourite-solutions/favourite-solutions.component.html
@@ -1,25 +1,28 @@
-<h3>Favourite Services</h3>
+<h3>Favourite Solutions</h3>
 
 <div class="container mt-4">
     <div class="row justify-content-center">
+        <p *ngIf="solutions.length === 0" class="text-center">
+            There are no favourite solutions.
+        </p>
         <div
-            *ngFor="let service of services"
+            *ngFor="let solution of solutions"
             class="col-lg-4 col-md-6 col-sm-12 mb-4 d-flex align-items-stretch"
         >
             <mat-card class="card shadow">
                 <img
                     mat-card-image
                     class="mat-card-image"
-                    [src]="service.images[0]"
-                    alt="Service image"
+                    [src]="solution.cardImage"
+                    alt="Solution image"
                 />
                 <mat-card-header>
                     <mat-card-title class="bold-font">{{
-                        service.name
+                        solution.name
                     }}</mat-card-title>
                 </mat-card-header>
                 <mat-card-content class="margin-top">
-                    <span>{{ service.description }}</span
+                    <span>{{ solution.description }}</span
                     ><br />
                 </mat-card-content>
             </mat-card>
