--- a/EventPlanner/src/app/user-manager/edit-profile/edit-profile.component.html
+++ b/EventPlanner/src/app/user-manager/edit-profile/edit-profile.component.html
@@ -1,37 +1,44 @@
 <div class="background">
     <div class="edit">
         <h1>Edit Profile</h1>
-        <form [formGroup]="editProfileForm" #formDirective="ngForm" (ngSubmit)="submit(formDirective)">
-
+        <form [formGroup]="editProfileForm" (ngSubmit)="submit()">
             <mat-form-field>
                 <mat-label>
-                  <mat-icon>email</mat-icon>
-                  E-mail
+                    <mat-icon>email</mat-icon>
+                    E-mail
                 </mat-label>
-                <input
-                  matInput
-                  formControlName="email"
-                  required />
-                <mat-error *ngIf="editProfileForm.get('email')?.touched && editProfileForm.get('email')?.hasError('required')">
+                <input matInput formControlName="email" required />
+                <mat-error
+                    *ngIf="
+                        editProfileForm.get('email')?.touched &&
+                        editProfileForm.get('email')?.hasError('required')
+                    "
+                >
                     Please enter e-mail address.
                 </mat-error>
-                <mat-error *ngIf="editProfileForm.get('email')?.touched && editProfileForm.get('email')?.hasError('email')">
+                <mat-error
+                    *ngIf="
+                        editProfileForm.get('email')?.touched &&
+                        editProfileForm.get('email')?.hasError('email')
+                    "
+                >
                     Please enter a valid e-mail address.
                 </mat-error>
             </mat-form-field>
 
             <mat-form-field>
                 <mat-label>
-                  <mat-icon>person</mat-icon>
-                  First Name
+                    <mat-icon>person</mat-icon>
+                    First Name
                 </mat-label>
-                <input
-                  matInput
-                  required
-                  formControlName="firstName"
-                />
-                <mat-error *ngIf="editProfileForm.get('firstName')?.invalid && editProfileForm.get('firstName')?.touched">
-                  Please enter first name.
+                <input matInput required formControlName="firstName" />
+                <mat-error
+                    *ngIf="
+                        editProfileForm.get('firstName')?.invalid &&
+                        editProfileForm.get('firstName')?.touched
+                    "
+                >
+                    Please enter first name.
                 </mat-error>
             </mat-form-field>
 
@@ -40,47 +47,72 @@
                     <mat-icon>person</mat-icon>
                     Last Name
                 </mat-label>
-                <input
-                    matInput
-                    required
-                    formControlName="lastName" />
-                <mat-error *ngIf="editProfileForm.get('lastName')?.invalid && editProfileForm.get('lastName')?.touched">
+                <input matInput required formControlName="lastName" />
+                <mat-error
+                    *ngIf="
+                        editProfileForm.get('lastName')?.invalid &&
+                        editProfileForm.get('lastName')?.touched
+                    "
+                >
                     Please enter last name.
                 </mat-error>
             </mat-form-field>
 
-            <mat-form-field *ngIf="editProfileForm.get('role')?.value !== 'Event Organizer'">
+            <mat-form-field *ngIf="user.role === 'SERVICE_PRODUCT_PROVIDER'">
                 <mat-label>
                     <mat-icon>business</mat-icon>
                     Company Name
                 </mat-label>
-                <input
-                    matInput
-                    required
-                    formControlName="companyName" />
-                <mat-error *ngIf="editProfileForm.get('companyName')?.invalid && editProfileForm.get('companyName')?.touched">
+                <input matInput required formControlName="companyName" />
+                <mat-error
+                    *ngIf="
+                        editProfileForm.get('companyName')?.invalid &&
+                        editProfileForm.get('companyName')?.touched
+                    "
+                >
                     Please enter company name.
                 </mat-error>
             </mat-form-field>
 
             <div class="profile-photo-section">
-                <mat-label style="color:#ebebeb; display: inline-flex; align-items: center;">
-                  <mat-icon style="margin-right: 0.5rem;">photo_camera</mat-icon>
-                  Profile Photo
+                <mat-label
+                    style="
+                        color: #ebebeb;
+                        display: inline-flex;
+                        align-items: center;
+                    "
+                >
+                    <mat-icon style="margin-right: 0.5rem"
+                        >photo_camera</mat-icon
+                    >
+                    Profile Photo
                 </mat-label>
                 <img
-                  class="profile-photo-placeholder"
-                  [src]="profilePhoto || 'assets/images/profile_photo_placeholder.png'"
-                  alt="Profile Photo"
+                    class="profile-photo-placeholder"
+                    [src]="
+                        profilePhoto ||
+                        'assets/images/profile_photo_placeholder.png'
+                    "
+                    alt="Profile Photo"
                 />
-                <button class="button" type="button" (click)="onSelectPhoto()">Select Photo</button>
-                <button class="button" type="button" *ngIf="profilePhoto" style="background-color: #de4d3e;" (click)="removePhoto()">Remove Photo</button>
+                <button class="button" type="button" (click)="onSelectPhoto()">
+                    Select Photo
+                </button>
+                <button
+                    class="button"
+                    type="button"
+                    *ngIf="profilePhoto"
+                    style="background-color: #de4d3e"
+                    (click)="removePhoto()"
+                >
+                    Remove Photo
+                </button>
                 <input
-                  type="file"
-                  accept="image/*"
-                  id="fileInput"
-                  hidden
-                  (change)="onFileSelected($event)"
+                    type="file"
+                    accept="image/*"
+                    id="fileInput"
+                    hidden
+                    (change)="onFileSelected($event)"
                 />
             </div>
 
@@ -89,11 +121,13 @@
                     <mat-icon>location_on</mat-icon>
                     Address
                 </mat-label>
-                <input
-                    matInput
-                    required
-                    formControlName="address" />
-                <mat-error *ngIf="editProfileForm.get('address')?.invalid && editProfileForm.get('address')?.touched">
+                <input matInput required formControlName="address" />
+                <mat-error
+                    *ngIf="
+                        editProfileForm.get('address')?.invalid &&
+                        editProfileForm.get('address')?.touched
+                    "
+                >
                     Please enter address.
                 </mat-error>
             </mat-form-field>
@@ -103,19 +137,26 @@
                     <mat-icon>phone</mat-icon>
                     Phone Number
                 </mat-label>
-                <input
-                    matInput
-                    required
-                    formControlName="phoneNumber" />
-                <mat-error *ngIf="editProfileForm.get('phoneNumber')?.touched && editProfileForm.get('phoneNumber')?.hasError('required')">
+                <input matInput required formControlName="phoneNumber" />
+                <mat-error
+                    *ngIf="
+                        editProfileForm.get('phoneNumber')?.touched &&
+                        editProfileForm.get('phoneNumber')?.hasError('required')
+                    "
+                >
                     Please enter phone number.
                 </mat-error>
-                <mat-error *ngIf="editProfileForm.get('phoneNumber')?.touched && editProfileForm.get('phoneNumber')?.hasError('pattern')">
+                <mat-error
+                    *ngIf="
+                        editProfileForm.get('phoneNumber')?.touched &&
+                        editProfileForm.get('phoneNumber')?.hasError('pattern')
+                    "
+                >
                     Please enter valid phone number (9 to 10 digits).
-                </mat-error>   
+                </mat-error>
             </mat-form-field>
 
-            <mat-form-field *ngIf="editProfileForm.get('role')?.value !== 'Event Organizer'">
+            <mat-form-field *ngIf="user.role === 'SERVICE_PRODUCT_PROVIDER'">
                 <mat-label>
                     <mat-icon>description</mat-icon>
                     Description
@@ -123,116 +164,169 @@
                 <textarea
                     matInput
                     required
-                    formControlName="description"></textarea>
-                <mat-error *ngIf="editProfileForm.get('description')?.invalid && editProfileForm.get('description')?.touched">
+                    formControlName="description"
+                ></textarea>
+                <mat-error
+                    *ngIf="
+                        editProfileForm.get('description')?.invalid &&
+                        editProfileForm.get('description')?.touched
+                    "
+                >
                     Please enter description.
                 </mat-error>
             </mat-form-field>
 
-            <mat-form-field *ngIf="editProfileForm.get('role')?.value !== 'Event Organizer'">
+            <mat-form-field *ngIf="user.role === 'SERVICE_PRODUCT_PROVIDER'">
                 <mat-label>
                     <mat-icon>category</mat-icon>
                     Categories
                 </mat-label>
-                <mat-select formControlName="categories" multiple required >
-                    <mat-option *ngFor="let category of categoriesList" [value]="category">{{ category }}</mat-option>
+                <mat-select formControlName="categories" multiple required>
+                    <mat-option
+                        *ngFor="let category of categoriesList"
+                        [value]="category"
+                        >{{ category }}</mat-option
+                    >
                 </mat-select>
-                <mat-error *ngIf="editProfileForm.get('categories')?.invalid && editProfileForm.get('categories')?.touched">
+                <mat-error
+                    *ngIf="
+                        editProfileForm.get('categories')?.invalid &&
+                        editProfileForm.get('categories')?.touched
+                    "
+                >
                     Please select categories.
                 </mat-error>
             </mat-form-field>
 
-            <mat-form-field *ngIf="editProfileForm.get('role')?.value !== 'Event Organizer'">
+            <mat-form-field *ngIf="user.role === 'SERVICE_PRODUCT_PROVIDER'">
                 <mat-label>
                     <mat-icon>event</mat-icon>
                     Event Types
                 </mat-label>
-                <mat-select formControlName="eventTypes" multiple required >
-                    <mat-option *ngFor="let eventType of eventTypesList" [value]="eventType">{{ eventType }}</mat-option>
+                <mat-select formControlName="eventTypes" multiple required>
+                    <mat-option
+                        *ngFor="let eventType of eventTypesList"
+                        [value]="eventType"
+                        >{{ eventType }}</mat-option
+                    >
                 </mat-select>
-                <mat-error *ngIf="editProfileForm.get('eventTypes')?.invalid && editProfileForm.get('eventTypes')?.touched">
+                <mat-error
+                    *ngIf="
+                        editProfileForm.get('eventTypes')?.invalid &&
+                        editProfileForm.get('eventTypes')?.touched
+                    "
+                >
                     Please select event types.
                 </mat-error>
             </mat-form-field>
 
             <mat-form-field>
                 <mat-label>
-                  <mat-icon>lock</mat-icon>
-                  Old Password
+                    <mat-icon>lock</mat-icon>
+                    Old Password
                 </mat-label>
                 <input
-                  matInput
-                  [type]="oldPasswordHidden ? 'password' : 'text'"
-                  formControlName="oldPassword"
-                  required
+                    matInput
+                    [type]="oldPasswordHidden ? 'password' : 'text'"
+                    formControlName="oldPassword"
                 />
-                <mat-error *ngIf="editProfileForm.get('oldPassword')?.invalid && editProfileForm.get('oldPassword')?.touched">Please enter old password.</mat-error>
-                <button
-                  mat-icon-button
-                  matSuffix
-                  type="button"
-                  (click)="togglePasswordVisibility('oldPassword')"
-                  [attr.aria-label]="'Hide old password'"
-                  [attr.aria-pressed]="!oldPasswordHidden"
+                <mat-error
+                    *ngIf="
+                        editProfileForm.get('oldPassword')?.hasError('required')
+                    "
                 >
-                  <mat-icon>{{ oldPasswordHidden ? 'visibility_off' : 'visibility' }}</mat-icon>
+                    Old password is required if you are changing your password.
+                </mat-error>
+                <button
+                    mat-icon-button
+                    matSuffix
+                    type="button"
+                    (click)="togglePasswordVisibility('oldPassword')"
+                    [attr.aria-label]="'Hide old password'"
+                    [attr.aria-pressed]="!oldPasswordHidden"
+                >
+                    <mat-icon>{{
+                        oldPasswordHidden ? "visibility_off" : "visibility"
+                    }}</mat-icon>
                 </button>
             </mat-form-field>
 
             <mat-form-field>
                 <mat-label>
-                  <mat-icon>lock</mat-icon>
-                  New Password
+                    <mat-icon>lock</mat-icon>
+                    New Password
                 </mat-label>
                 <input
-                  matInput
-                  [type]="newPasswordHidden ? 'password' : 'text'"
-                  formControlName="newPassword"
-                  required
+                    matInput
+                    [type]="newPasswordHidden ? 'password' : 'text'"
+                    formControlName="newPassword"
                 />
-                <mat-error *ngIf="editProfileForm.get('newPassword')?.invalid && editProfileForm.get('newPassword')?.touched">Please enter new password.</mat-error>
-                <button
-                  mat-icon-button
-                  matSuffix
-                  type="button"
-                  (click)="togglePasswordVisibility('newPassword')"
-                  [attr.aria-label]="'Hide new password'"
-                  [attr.aria-pressed]="!newPasswordHidden"
+                <mat-error
+                    *ngIf="
+                        editProfileForm.get('newPassword')?.hasError('required')
+                    "
                 >
-                  <mat-icon>{{ newPasswordHidden ? 'visibility_off' : 'visibility' }}</mat-icon>
-                </button>
-            </mat-form-field>
-              
-            <mat-form-field>
-                <mat-label>
-                  <mat-icon>lock</mat-icon>
-                  Confirm New Password
-                </mat-label>
-                <input
-                  matInput
-                  [type]="confirmNewPasswordHidden ? 'password' : 'text'"
-                  formControlName="confirmNewPassword"
-                  required
-                />
-                <mat-error *ngIf="editProfileForm.get('confirmNewPassword')?.hasError('required')">
-                    Please confirm new password.
-                </mat-error>
-                <mat-error *ngIf="!editProfileForm.get('confirmNewPassword')?.hasError('required') && editProfileForm.get('confirmNewPassword')?.hasError('notMatching')">
-                    Not same as new password.
+                    New password is required if you provide an old password.
                 </mat-error>
                 <button
-                  mat-icon-button
-                  matSuffix
-                  type="button"
-                  (click)="togglePasswordVisibility('confirmNewPassword')"
-                  [attr.aria-label]="'Hide confirm new password'"
-                  [attr.aria-pressed]="!confirmNewPasswordHidden"
+                    mat-icon-button
+                    matSuffix
+                    type="button"
+                    (click)="togglePasswordVisibility('newPassword')"
+                    [attr.aria-label]="'Hide new password'"
+                    [attr.aria-pressed]="!newPasswordHidden"
                 >
-                  <mat-icon>{{ confirmNewPasswordHidden ? 'visibility_off' : 'visibility' }}</mat-icon>
+                    <mat-icon>{{
+                        newPasswordHidden ? "visibility_off" : "visibility"
+                    }}</mat-icon>
                 </button>
             </mat-form-field>
 
-            <input type="submit" value="Edit" id="submit"/>
+            <mat-form-field>
+                <mat-label>
+                    <mat-icon>lock</mat-icon>
+                    Confirm New Password
+                </mat-label>
+                <input
+                    matInput
+                    [type]="confirmNewPasswordHidden ? 'password' : 'text'"
+                    formControlName="confirmNewPassword"
+                />
+                <mat-error
+                    *ngIf="
+                        editProfileForm
+                            .get('confirmNewPassword')
+                            ?.hasError('required')
+                    "
+                >
+                    Confirm new password is required.
+                </mat-error>
+                <mat-error
+                    *ngIf="
+                        editProfileForm
+                            .get('confirmNewPassword')
+                            ?.hasError('notMatching')
+                    "
+                >
+                    Confirm new password must match the new password.
+                </mat-error>
+                <button
+                    mat-icon-button
+                    matSuffix
+                    type="button"
+                    (click)="togglePasswordVisibility('confirmNewPassword')"
+                    [attr.aria-label]="'Hide confirm new password'"
+                    [attr.aria-pressed]="!confirmNewPasswordHidden"
+                >
+                    <mat-icon>{{
+                        confirmNewPasswordHidden
+                            ? "visibility_off"
+                            : "visibility"
+                    }}</mat-icon>
+                </button>
+            </mat-form-field>
+
+            <input type="submit" value="Edit" id="submit" />
         </form>
     </div>
 </div>
