--- a/EventPlanner/src/app/service-manager/edit-service/edit-service.component.html
+++ b/EventPlanner/src/app/service-manager/edit-service/edit-service.component.html
@@ -51,7 +51,7 @@
 			</mat-error>
 		</mat-form-field>
 
-		<mat-form-field appearance="fill" class="form-field full-width">
+		<mat-form-field appearance="fill" class="form-field">
 			<mat-label>Event Type</mat-label>
 			<mat-select formControlName="eventTypes" multiple>
 			  <mat-option *ngFor="let option of eventTypes" [value]="option">
@@ -62,7 +62,38 @@
 			  Event Type is required
 			</mat-error>
 		</mat-form-field>
+
+		<mat-form-field appearance="fill" class="form-field">
+			<mat-label>Location</mat-label>
+			<input type="text" matInput placeholder="Location" formControlName="location" [matAutocomplete]="auto"/>
+			<mat-autocomplete #auto="matAutocomplete" (optionSelected)="onLocationSelected($event.option.value)">
+				<mat-option *ngFor="let option of autocompleteOptions" [value]="option">
+					{{ option.displayName }}
+				</mat-option>
+			</mat-autocomplete>
+			<mat-error *ngIf="editServiceForm.get('location')?.invalid && editServiceForm.get('location')?.touched">
+			  Location is required.
+			</mat-error>
+		</mat-form-field>
 	
+		<mat-form-field appearance="fill" class="form-field half-width">
+			<mat-label>Working Hours Start</mat-label>
+			<input matInput [ngxMatTimepicker]="startTimePicker" formControlName="workingHoursStart" />
+			<ngx-mat-timepicker #startTimePicker></ngx-mat-timepicker>
+			<mat-error *ngIf="editServiceForm.get('workingHoursStart')?.invalid && editServiceForm.get('workingHoursStart')?.touched">
+			  Working hours start is required.
+			</mat-error>
+		  </mat-form-field>
+		  
+		  <mat-form-field appearance="fill" class="form-field half-width">
+			<mat-label>Working Hours End</mat-label>
+			<input matInput [ngxMatTimepicker]="endTimePicker" formControlName="workingHoursEnd" />
+			<ngx-mat-timepicker #endTimePicker></ngx-mat-timepicker>
+			<mat-error *ngIf="editServiceForm.get('workingHoursEnd')?.invalid && editServiceForm.get('workingHoursEnd')?.touched">
+			  Working hours end is required.
+			</mat-error>
+		</mat-form-field>
+
 		<mat-form-field appearance="fill" class="form-field">
 		<mat-label>Reservation Deadline (Days)</mat-label>
 		<input 
