--- a/EventPlanner/src/app/service-manager/services/services.component.html
+++ b/EventPlanner/src/app/service-manager/services/services.component.html
@@ -22,7 +22,9 @@
               <mat-icon class="custom-delete-icon"></mat-icon>
             </button>
           </div>
-          <img mat-card-image class="mat-card-image" [src]="service.images[0]" alt="{{ service.name }}" />
+          <img mat-card-image class="mat-card-image"
+          [src]="service.images[0]"
+          alt="{{ service.name }}" />
           <mat-card-header>
             <mat-card-title>{{ service.name }}</mat-card-title>
           </mat-card-header>
