--- a/EventPlanner/src/app/service-manager/create-service/create-service.component.html
+++ b/EventPlanner/src/app/service-manager/create-service/create-service.component.html
@@ -146,10 +146,11 @@
           <mat-icon>add_photo_alternate</mat-icon>
         </label>
         <input
-          formControlName="images"
           type="file"
           id="imageUpload"
+          multiple
           (change)="onFileSelected($event)"
+          accept="image/*"
           multiple
           hidden
         />
