--- a/EventPlanner/src/app/event-manager/edit-event/edit-event.component.html
+++ b/EventPlanner/src/app/event-manager/edit-event/edit-event.component.html
@@ -218,7 +218,7 @@
         <div class="buttons">
             <button mat-raised-button type="button">Update Agenda</button>
             <button
-                [routerLink]="['/events/create/budget-planning']"
+                [routerLink]="['/events/edit/budget-planning/' + id]"
                 mat-raised-button
                 type="button"
             >
