[ADD] Communication Initialization

--- a/EventPlanner/src/app/shared/navbar/navbar.component.html
+++ b/EventPlanner/src/app/shared/navbar/navbar.component.html
@@ -19,7 +19,7 @@
       <mat-icon>home</mat-icon>
       Home
     </a>
-    <a class="nav-item" routerLink="/chat" routerLinkActive="active" *ngIf="isLoggedIn && userRole !== 'AUTHENTICATED_USER'">
+    <a class="nav-item" routerLink="/chat" routerLinkActive="active" *ngIf="isLoggedIn">
       <mat-icon>chat</mat-icon>
       Chat
     </a>
