--- a/EventPlanner/src/app/chat/chat/chat.component.css
+++ b/EventPlanner/src/app/chat/chat/chat.component.css
@@ -1,104 +1,111 @@
 .chat-container {
-    display: flex;
-    height: 100%;
-    background-color: #f4f4f9;
-  }
-  
-  .chat-list {
-    width: 30%;
-    background-color: #2f2f2f;
-    color: white;
-    padding: 1rem;
-    overflow-y: auto;
-  }
-  
-  .chat-list .search-input {
-    width: 100%;
-    padding: 0.5rem;
-    margin-bottom: 1rem;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-  }
-  
-  .chat-list ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .chat-list li {
-    padding: 1rem;
-    cursor: pointer;
-    border-bottom: 1px solid #444;
-    transition: background-color 0.3s ease;
-  }
-  
-  .chat-list li:hover {
-    background-color: #444;
-  }
-  
-  .chat-list li.selected {
-    background-color: #555;
-  }
-  
-  .chat-window {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #ececec;
-  }
-  
-  .messages {
-    flex: 1;
-    overflow-y: auto;
-    padding: 1rem;
-  }
-  
-  .messages div {
-    margin-bottom: 1rem;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    word-wrap: break-word;
-  }
-  
-  .messages .sent {
-    background-color: #4caf50;
-    color: white;
-    align-self: flex-end;
-    max-width: 70%;
-  }
-  
-  .messages .received {
-    background-color: #ddd;
-    align-self: flex-start;
-    max-width: 70%;
-  }
-  
-  .message-input {
-    display: flex;
-    padding: 1rem;
-    background-color: white;
-  }
-  
-  .message-input input {
-    flex: 1;
-    padding: 0.5rem;
-    margin-right: 1rem;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-  }
-  
-  .message-input button {
-    padding: 0.5rem 1rem;
-    background-color: #4caf50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .message-input button:hover {
-    background-color: #45a049;
-  }
-  
+  display: flex;
+  height: 100%;
+  background-color: #f4f4f9;
+}
+
+.chat-list {
+  width: 25em;
+  background-color: #2C3E50;
+  color: white;
+  padding: 1rem;
+  overflow-y: auto;
+}
+
+.chat-list .search-input {
+  width: 100%;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+.chat-list ul {
+  list-style: none;
+  padding: 0;
+}
+
+.chat-list li {
+  padding: 1rem;
+  cursor: pointer;
+  border-bottom: 1px solid #273849;
+  border-radius: 0.5em;
+  transition: background-color 0.3s ease;
+}
+
+.chat-list li:hover {
+  background-color: #273849;
+}
+
+.chat-list li.selected {
+  background-color: #4a6375;
+}
+
+.chat-window {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  background-color: #ececec;
+  padding: 1rem;
+}
+
+.messages {
+  flex: 1;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 0 10em;
+  justify-content: flex-end;
+}
+
+.messages div {
+  margin-bottom: 0.2rem;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  word-wrap: break-word;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.messages .sent {
+  background-color: #A29BFE;
+  color: white;
+  align-self: flex-end;
+  max-width: 70%;
+}
+
+.messages .received {
+  background-color: #ddd;
+  align-self: flex-start;
+  max-width: 70%;
+}
+
+.message-input {
+  display: flex;
+  padding: 1rem;
+  margin-top: 1em;
+  background-color: white;
+}
+
+.message-input input {
+  flex: 1;
+  padding: 0.5rem;
+  margin-right: 1rem;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+.message-input button {
+  padding: 0.5rem 1rem;
+  background-color: #A29BFE;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.message-input button:hover {
+  background-color: #776dff;
+}
