--- a/EventPlanner/src/app/shared/navbar/navbar.component.css
+++ b/EventPlanner/src/app/shared/navbar/navbar.component.css
@@ -121,12 +121,7 @@ mat-drawer-content {
     color: #3f3f3f;
     font-size: 12px;
     border-radius: 50%; 
-    padding: 4px;
-    min-width: 26px;
-    min-height: 20px;
+    width: 25px;
     text-align: center;
-    line-height: 20px;
     margin-left: 5px;
-    vertical-align: super;
-    display: inline-block;
   }
