--- a/EventPlanner/src/app/shared/navbar/navbar.component.html
+++ b/EventPlanner/src/app/shared/navbar/navbar.component.html
@@ -22,6 +22,7 @@
     <a class="nav-item" routerLink="/chat" routerLinkActive="active" *ngIf="isLoggedIn">
       <mat-icon>chat</mat-icon>
       Chat
+      <span *ngIf="unseenMessagesCount > 0" class="notification-badge">{{ unseenMessagesCount }}</span>
     </a>
     <a class="nav-item" routerLink="/notifications" routerLinkActive="active" *ngIf="isLoggedIn">
       <mat-icon>notifications</mat-icon>
